# store-scraper

./: .gitignore  README.md  SCHEMA.md  add_missing_appids.py  pyproject.toml  scrape.bat
scripts/: crawl.py
scripts/catalog/: db.py  http.py  ingest.py  io_writer.py  normalize.py  runner.py
scripts/catalog/adapters/: .steamignore  base.py  nintendo.py  psn.py  steam.py  xbox.py
